--- a/src/components/Login/login.scss
+++ b/src/components/Login/login.scss
@@ -48,9 +48,9 @@
 
 .buttonContainer {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-between;
   height: 260px;
 }
 
@@ -81,6 +81,21 @@
   border: none;
   border-radius: 4px;
   padding: 10px 20px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  margin-right: 30px;
+
+  &:hover {
+    background-color: $blue-dark;
+  }
+}
+
+.SinginButton{
+  background-color: $secondary-color;
+  color: $primary-color;
+  border: none;
+  border-radius: 4px;
+  padding: 7px 20px;
   cursor: pointer;
   transition: background-color 0.3s;
 
